2005-02-22  Matthias Wimmer  <m@tthias.net>

    * xdb_sql/xdb_sql.c: added possibility to load XML fron database

2005-02-21  Matthias Wimmer  <m@tthias.net>

    * jabber.xml.dist.in: added new component xdb_sql
    * configure.in: same
    * xdb_sql/Makefile.am: same
    * xdb_sql/xdb_sql.c: same
    * Makefile.am: same

2005-02-18  Matthias Wimmer  <m@tthias.net>

    * jabberd/xdb.c: added comments about xdb-set check action
    * xdb_file/xdb_file.c: same
    * jsm/modules/mod_auth_plain.c: 2004-09-24 change disabled unregistering

2005-02-17  Matthias Wimmer  <m@tthias.net>

    * jsm/server.c: bugfix, jsm could be crashed
    * jsm/deliver.c: same

2004-10-12  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.c: restored 1.4.3 behaviour of -D option, new one is -d
    * jsm/authreg.c: locking the udata structure in some cases
    * jsm/deliver.c: same
    * jsm/server.c: same
    * jsm/users.c: We don't have to convert to lowercase if libidn already did

2004-10-06  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: When trashing timed-out db queries, we sent
	invalid db:results, that did not contain a type='invalid' attribute
    * jsm/modules/mod_stat.c: Use instance memory pool for memory allocation

2004-10-05  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: Changed duplicate error messages
    * dialback/dialback_out.c: same

2004-09-28  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: added STARTTLS support for c2s conns
    * pthsock/client.c: same

2004-09-27  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback_in.c: added STARTTLS support for s2s conns
    * dialback/dialback_out.c: same
    * jabberd/jabberd.h: added support in MIO to enable TLS on existing conn
    * jabberd/mio_ssl.c: same
    * jabberd/mio_xml.c: same
    * jabberd/lib/jabberdlib.h: added namespace decl for STARTTLS feature
    * jsm/modules/mod_auth_plain.c: username check only for updates
